fix: BLOG-59 get memurai table: column header align; cell centering fixes

--- a/static/scss/_modifiers.scss
+++ b/static/scss/_modifiers.scss
@@ -80,6 +80,12 @@
   }
 }
 
+.justify {
+  &-center {
+    justify-content: center!important;
+  }
+}
+
 .pb {
   &-0 {
     padding-bottom: 0;
