--- a/static/scss/elements/_table.scss
+++ b/static/scss/elements/_table.scss
@@ -150,8 +150,8 @@
         align-items: center;
         justify-content: flex-start;
         .icon {
-          margin-left: auto;
-          margin-right: auto;
+          // margin-left: auto;
+          // margin-right: auto;
         }
         // hardcoded to fix block height
         .table__block {
